package com.enhui.design.command;

/**
 * 接收者
 *
 * @Author 胡恩会
 * @Date 2020/6/26 21:59
 **/
public class LightReceiver {

    void on() {
        System.out.println("打开电灯");
    }
    void off() {
        System.out.println("关闭电灯");
    }
}
